--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,5 +1,8 @@
 .admin-workspace {  width:100%;margin:0px;max-width:100%; }
 .no-padding { padding: 0px !important; }
+.no-margin-left { margin-left:0px !important; }
+.right-margin { margin-right: 10px; }
+
 .sidebar { height:100vh;background-color: #0f1c29; }
 .logo-block { background-color: #fff;text-align: center;padding: 10px; }
 .logo-block img { width:80%; }
@@ -15,3 +18,7 @@
 
 .footer-text { background-color:#0f1c29; }
 .footer-text p { color: #fff;line-height: 3.5;float: right;height: 30px;bottom: 0;margin-right: 10px; }
+
+.add-top-margin { margin-top: 10px; }
+
+em { color:red; }
